# veebrate-multi

./: .gitignore  LICENSE  Makefile
backends/actix/: Cargo.toml
backends/actix/src/: main.rs  server.rs
backends/actix/static/: index.html
backends/django/: requirements.txt
backends/django/apps/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
backends/django/apps/veebrate/: apps.py  consumers.py  models.py
backends/django/apps/veebrate/migrations/: 0001_initial.py
backends/django/apps/veebrate/static/veebrate/: main.js
backends/django/apps/veebrate/templates/: index.html
backends/vertx/: Procfile  build.gradle  settings.gradle
backends/vertx/gradle/wrapper/: gradle-wrapper.properties
backends/vertx/src/main/java/veebrate/: App.java
backends/vertx/src/main/js/: App.js
backends/vertx/src/main/kotlin/veebrate/: App.kt
backends/vertx/src/main/resources/webroot/: veebrate-app-11eb8425.js.map
backends/vertx/src/test/java/veebrate/: AppTest.java
frontends/elm/: elm.json  main.js
frontends/elm/elm-stuff/0.19.1/: Main.elmi  Main.elmo
frontends/elm/src/: Main.elm
frontends/lit-html/: LICENSE  index.html  package-lock.json  package.json  rollup.config.js
frontends/lit-html/src/: veebrate-app.js
frontends/lit-html/test/: veebrate-app.test.js
frontends/scss/: main.scss
frontends/scss/bulma/: slider.sass
