[package]
name = "actix"
version = "0.1.0"
authors = ["mrpavis <david.steffen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-rt = "1.0"
uuid = "0.5.1"